Changed alert message

--- a/numberValidate.html
+++ b/numberValidate.html
@@ -6,7 +6,7 @@
 				var inp = document.forms["myForm"]["numb"].value;
 				console.log(inp);
 				if( inp < 1 || inp > 10){
-					alert("Number not in range");
+					alert("Number is not in range");
 					return false;
 				}
 			}
