--- a/flowers.html
+++ b/flowers.html
@@ -18,7 +18,7 @@ lily
 <h1>hhhhhh</h1>
 <p>
 This is a flower found in india.
-<a href="https://www.w3schools.com"> this is the link </a>
+<a href="https://www.w3schools.com"> Find a flower in this link </a>
 <img src="flower.jpg" alt="this is a flower" width=150 height=300>
 
 
