--- a/TimingEvents.html
+++ b/TimingEvents.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<body>
-		<button onclick="timeout = setInterval(myFunction,1)">Start Alert</button>
+		<button onclick="timeout = setInterval(myFunction,1)">Start Event</button>
 		<button onclick="clearInterval(timeout);">Stop</button>
 		<p id="demo"></p>
 		<script>
